---------------------------------------------------------------------------------------------------
Version: 0.69.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.2
Date: 2025-09-13
  Changes:
    - Speed3 and prod3 modules slightly nerfed.
    - LDS shuffle and blue chip prod spam both nerfed.
---------------------------------------------------------------------------------------------------
Version: 0.69.1
Date: ????
  Changes:
    - First release.