@@ -2,47 +2,47 @@
 Reach me fastest on Discord.
 ---
 
-This is a Space Age rebalance mod. It changes several key points of balance without fundamentally changing the complexity. It should not be added mid-playthrough, and it is opinionated.
+This is a Space Age rebalance mod. It changes several key points of balance without fundamentally changing the complexity. This mod is opinionated, and made through thorough discussion on discord. *It is best to add this mod before establishing bases on planets beyond Nauvis.* It will otherwise have breaking changes, especially for Gleba/Vulcanus science production.
 
 ----
 # Change List
 
 ## Vulcanus:
-- Coal liquefaction is now weaker (slower amd less output), because Vulcanus petrochemistry is supposed to be its weakness.
-- Metallurgic science recipe changed to be about big scale metal casting.
+- Coal liquefaction and steam condensation are now slower with less output, because Vulcanus petrochemistry is supposed to be its weakness.
+- Metallurgic science recipe changed to be tungsten carbide + refined concrete + big power poles. This demands heavy use of the foundry to make effectively, to better match Vulcanus’s theme on bigtime casting.
 
 ## Fulgora:
-- Holmium is more abundant via holmium solution recipe.
-- Several recycler recipes used for voiding are now substantially faster, to aid with scaling things up on Fulgora.
+- Holmium is more abundant via holmium solution recipe. Holmium solution can be made in biochamber for higher productivity. The goal is to help freeform bases by reducing pressure to make holmium-centric designs.
+- Several recycler recipes are much faster to aid scaling up on Fulgora. Affects iron plates, copper plates, low density structure, red chip, and blue chips. 
 - Scrap now requires lubricant to mine.
-- Holmium solution can be made with a biochamber for better productivity.
 
 ## Gleba:
-- Biochamber is much stronger (especially outside Gleba). It has more module slots, more base productivity, and more recipes.
+- Biochamber is much stronger (especially outside Gleba). It has more module slots, more base productivity, and more non-Gleba recipes.
 - Gleba evolution now scales with how many agriculture science packs were made, to guarantee time to defend yourself.
-- To incentivise Glebase-building, agriculture science instead requires plastic, iron bacteria, and rocket fuel. Iron ore can now be recycled by biochamber.
-- Agriculture science is always made fresh.
-- Efficiency module 3 is slightly stronger.
+- Agriculture science instead requires plastic, iron bacteria, and rocket fuel. Iron ore can now be recycled by biochamber. Agriculture science is always made fresh. This incentivises Glebase-building.
 - Fruit processing now yields very slightly more seeds, to accelerate growth and give more tolerance for new players.
 - Rocket turret now has a bigger range and rockets are faster. This allows rocket turrets to much more effectively defend Gleba.
-- Bioflux can now be recycled with jelly/mash (but only on Gleba!) to make quality grinding viable.
+- Bioflux can now be recycled with jelly/mash (but only on Gleba!) to make quality grinding of Gleba items easier.
 
 ## Aquilo:
 - Cryo plant can now make chemical science.
-- Railgun damage reesearch now needs cryo science packs.
+- Railgun damage research now needs cryo science packs.
 - Regular labs can no longer use cryogenic/promethium science packs.
 
 ## Space:
 - Crushers now have a small bit of negative quality bonus. Space casinos are still doable and viable, but don't pop off as hard.
-- Productivity no longer applies to the asteroid chunk that you get back out from a crushing or advanced crushing recipe.
+- Productivity no longer applies to the asteroid chunk that you get back out from a crushing or advanced crushing recipe. (300% prod gives 4x yield instead of 16x!)
 
 ## Quality / General:
 - Beacon effect distribution now scales less with quality.
-- Speed3 and Producitivity3 modules very slightly nerfed, because they really let you run over unique traits of planets when you have them in quality.
-- LDS shuffle and processing unit upcycling nerfed by making it's max prod slightly less than 300%. It's still good, but no longer 100% free.
+- Speed module 3 and Productivity module 3 are slightly nerfed, because they let you run over unique traits of planets when you have them in quality.
+- Efficiency module 3 slightly stronger.
+- LDS shuffle and processing unit upcycling nerfed by making their max prod less than 300%. It's still good, but no longer free.
+- Rocket part items (blue chips, rocket fuel, low density structure) have lower rocket capacities, to promote local production of rocket parts on each surface over importing rocket parts.
 
 ------------
 # Notes
 
+- Overall: Gleba gets easier, but makes you play more of the planet. Fulgora gets stronger. Vulcanus gets weaker. Aquilo/Nauvis/Space are mostly unchanged. Quality/prod snowballing and cheese are reigned in.
 - May not be compatible with several overhauls.
 - May interfere with balance changes from mod planets. Eg if every mod planet adds something for holmium, making holmium more abundant will relatively nerf their rewards.
